client/src/App.css
.app-container {
  height: 100vh;
  max-height: 100vh;
}

.modal {
  position: absolute;
  top: 50%;
  left: 50%;
  right: auto;
  bottom: auto;
  padding: 10px 30px;
  margin: 50px 50% 0 120px;
  -webkit-transform: translate(-50%, -50%);
          transform: translate(-50%, -50%);
  background: #616161;
  border-radius: 4px;
  overflow: auto;
  outline: none;
}

.modal-overlay {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.5);
  z-index: 20;
}

.modal-close {
  position: absolute;
  right: 20px;
  top: 15px;
  width: 32px;
  height: 32px;
  opacity: 0.5;
  cursor: pointer;
}

.modal-close:hover {
  opacity: 1;
}

.modal-close:before, .modal-close:after {
  position: absolute;
  left: 15px;
  height: 33px;
  width: 3px;
  background-color: #c8c8c8;
  content: ' ';
}

.modal-close:before {
  -webkit-transform: rotate(45deg);
          transform: rotate(45deg);
}

.modal-close:after {
  -webkit-transform: rotate(-45deg);
          transform: rotate(-45deg);
}

.modal-title {
  font-size: 42px;
  margin-bottom: 5px;
}

.faded-seperator {
  width: 100%;
  height: 2px;
  margin-left: auto;
  margin-right: auto;
  border-radius: 10px;
  background: rgba(255, 255, 255, 0.2);
  -webkit-filter: blur(1px);
          filter: blur(1px);
}
/*# sourceMappingURL=App.css.map */

